--- a/pom.xml
+++ b/pom.xml
@@ -6,23 +6,18 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>fr.ina.dlweb</groupId>
-        <artifactId>dlweb-maven-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-
+    <groupId>com.davidrapin</groupId>
     <artifactId>jlap</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Java LAP</name>
-    <url>http://atelier-dlweb.fr/</url>
+    <url>http://github.com/davidrapin/jlap/</url>
 
     <scm>
-        <url>https://extradev.ina.fr:4443/svn/dlweb/java/jlap</url>
-        <connection>scm:svn:https://extradev.ina.fr:4443/svn/dlweb/java/jlap</connection>
-        <developerConnection>scm:svn:https://extradev.ina.fr:4443/svn/dlweb/java/jlap</developerConnection>
+        <url>http://github.com/davidrapin/jlap/</url>
+        <connection>scm:git:http://github.com/davidrapin/jlap/</connection>
+        <developerConnection>scm:git:http://github.com/davidrapin/jlap/</developerConnection>
         <tag>HEAD</tag>
     </scm>
 
@@ -37,34 +32,49 @@
 
         <!-- http://netty.io/downloads.html -->
         <dependency>
-        	<groupId>io.netty</groupId>
-        	<artifactId>netty-all</artifactId>
-        	<version>4.0.0.CR1</version>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.0.0.CR1</version>
         </dependency>
 
         <dependency>
-        	<groupId>io.netty</groupId>
-        	<artifactId>netty-example</artifactId>
-        	<version>4.0.0.CR1</version>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-example</artifactId>
+            <version>4.0.0.CR1</version>
+        </dependency>
+
+        <!-- simple logging facade for java -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+
+        <!-- using log4j behind SLF4J -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+
+        <!-- cryptography -->
+        <dependency>
+            <groupId>bouncycastle</groupId>
+            <artifactId>bcprov-jdk16</artifactId>
+            <version>136</version>
         </dependency>
 
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.mail</groupId>
-                    <artifactId>mail</artifactId>
-                </exclusion>
-            </exclusions>
+            <scope>test</scope>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.1.1</version>
         </dependency>
-
 
         <!--<dependency>-->
-        	<!--<groupId>org.littleshoot</groupId>-->
-        	<!--<artifactId>littleproxy</artifactId>-->
-        	<!--<version>0.4</version>-->
+        <!--<groupId>org.littleshoot</groupId>-->
+        <!--<artifactId>littleproxy</artifactId>-->
+        <!--<version>0.4</version>-->
         <!--</dependency>-->
 
 
@@ -75,7 +85,50 @@
     </properties>
 
     <build>
+
+
         <plugins>
+            <!-- specify language version for compiler -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.0.2</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+
+            <!-- build a sources jar -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.0.4</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- attach java docs -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.3</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -86,7 +139,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>fr.ina.dlweb.jlap.Main</mainClass>
+                            <mainClass>com.davidrapin.jlap.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
